// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keyValueInput > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders correctly with selectInput 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkzr"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkzr"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size large correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size medium correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_medium__e1wcoef styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size small correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_small__e1wcoeg styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders with maxSize 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_j_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_j_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_p_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_p_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_11_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_11_"
                name="key-value-input.1.key"
                type="text"
                value="key2"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_17_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_17_"
                name="key-value-input.1.value"
                type="text"
                value="value2"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-1"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should correctly call onChange 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_1i_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_1i_"
                name="name.0.key"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_1o_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_1o_"
                name="name.0.value"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should correctly call onChange when select 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            aria-label="key-value-input.0.key"
            class="styles__uf6pag0"
          >
            <div
              aria-controls="_r_28_"
              aria-describedby="_r_28_"
              class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
              tabindex="-1"
            >
              <div
                class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <label
                  class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_26_"
                >
                  key
                </label>
                <div
                  aria-controls="_r_28_"
                  aria-expanded="false"
                  aria-label="key"
                  class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-key-value-input.0.key"
                  id="_r_26_"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  >
                    option-1
                  </span>
                  <div
                    class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                  >
                    <svg
                      aria-hidden="true"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-label="key-value-input.0.value"
            class="styles__uf6pag0"
          >
            <div
              aria-controls="_r_2i_"
              aria-describedby="_r_2i_"
              class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
              tabindex="-1"
            >
              <div
                class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <label
                  class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_2g_"
                >
                  value
                </label>
                <div
                  aria-controls="_r_2i_"
                  aria-expanded="false"
                  aria-label="value"
                  class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-key-value-input.0.value"
                  id="_r_2g_"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  >
                    option-2
                  </span>
                  <div
                    class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                  >
                    <svg
                      aria-hidden="true"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should work when adding a line 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_3j_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_3j_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_3p_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_3p_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            aria-describedby="_r_42_"
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should work when removing a line 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__5jnvwo2 styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_44_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_44_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_4a_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_4a_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              Delete
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          class="styles__1y5sygv5"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
